force-app/main/default/objects/API_Payload_Handler__c/API_Payload_Handler__c.object-meta.xml
<CustomObject>
    <description>To enable API requests to be sent directly from Salesforce</description>
    <label>API Payload Handler</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>API Payload Handlers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>