force-app/main/default/objects/API_Payload_Handler__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>This is the Universal Resource Locator (URL) of the resource you wish to submit the API Request to.</description>
    <label>Endpoint</label>
    <type>Url</type>
</CustomField>