force-app/main/default/objects/API_Payload_Handler__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>This is the HTTP Method that you wish to use when making the API Request.</description>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Method</valueSetName>
    </valueSet>
</CustomField>