force-app/main/default/objects/API_Payload_Handler__c/fields/Org_Name__c.field-meta.xml
<CustomField>
    <fullName>Org_Name__c</fullName>
    <label>Org Name</label>
	<description>This is the Org Name you are making your API Request into.</description>
    <valueSet>
    	<valueSetName>Org_Name</valueSetName>
    </valueSet>
    <type>Picklist</type>
</CustomField>