force-app/main/default/objects/API_Payload_Handler__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <label>Parent Id</label>
	<description>This field is used to copy and paste the previous reference to an API Payload Handler record that you have requested to clone.</description>
	<type>Lookup</type>
	<referenceTo>API_Payload_Handler__c</referenceTo>
	<relationshipName>API_Payload_Handler</relationshipName>
</CustomField>