force-app/main/default/objects/API_Payload_Handler__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
	<description>This will allow you to record the type of application API Request that you are wishing to send.</description>
    <valueSet>
    	<valueSetName>Type</valueSetName>
    </valueSet>
    <type>Picklist</type>
</CustomField>