force-app/main/default/objects/API_Payload_Handler__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <label>Username</label>
	<description>This will allow you to record the username which you would use to submit this API Request.</description>
    <valueSet>
    	<valueSetName>Username</valueSetName>
    </valueSet>
    <type>Picklist</type>
</CustomField>